# pydomino

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dev_in_mac.Dockerfile  pyproject.toml  setup.py  temp.txt
.devcontainer/: devcontainer.json
docs/: .buildinfo  aligner.html  examples.html  genindex.html  how_to_make_onnxfile.html  index.html  modules.html  objects.inv  py-modindex.html  pydomino.html  search.html  searchindex.js
docs/_sources/: examples.rst.txt  how_to_make_onnxfile.rst.txt  index.rst.txt  modules.rst.txt
pydomino/: __init__.py  __main__.py  pydomino.py
sphinx/: README.md  aligner.rst  conf.py  how_to_make_onnxfile.rst  index.rst  modules.rst
sphinx/py_src/: pydomino.py
sphinx/source/: conf.py  examples.rst  how_to_make_onnxfile.rst  index.rst  modules.rst  pydomino.rst
sphinx/source/py_src/: pydomino.py
src/: domino.cpp  domino.hpp  lib.cpp  load_wav.cpp  load_wav.hpp  main.cpp  phoneme_transition.cpp  phoneme_transition.hpp  phoneme_transitions.txt  viterbi.cpp  viterbi.hpp
tests/: CMakeLists.txt  README.md  test_onnxruntime.cpp  test_pydomino.py  test_tokenizer.cpp  test_viterbi.cpp
tests/expected_results_lib/: dowaNgo.lab  ishIkI.lab  tasuuketsU.lab
tests/results_lib/: tasuuketsU.lab
